--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for ansible_burpui_agent/
+
+- name: restart buiagent
+  supervisorctl:
+    name: buiagent
+    state: restarted
