small fixes on missed lines

--- a/tasks/config_agent.yml
+++ b/tasks/config_agent.yml
@@ -43,11 +43,10 @@
 
 - name: install buiagent pip packages
   pip:
-    name: "{{ item }}"
+    name: "{{ burp_agent_pip_present }}"
     state: present
     executable: "{{ python_pip_executable }}"
     extra_args: --ignore-installed six
-  with_items: "{{ burp_agent_pip_present }}"
 
 - name: Install buiagent pip
   pip:
