--- a/vars/Debian-9.yml
+++ b/vars/Debian-9.yml
@@ -5,12 +5,14 @@ burp_agent_packages:
   - python-pip
   - python-dev
   - libffi-dev  # required for burpui cffi
+  - libssl-dev
 
 burp_agent_py3_packages:
   - python3
   - python3-dev
   - python3-pip
   - libffi-dev  # required for burpui cffi
+  - libssl-dev
 
 supervisoretc_dir: "/etc/supervisor/conf.d"
 supervisor_ext: "conf"
