--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,3 +9,7 @@
 - include: config_agent.yml
 
 - include: supervisor.yml
+  when: not bui_agent_systemd
+
+- include: systemd.yml
+  when: bui_agent_systemd
