change name for systemd bui-agent service

--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -16,7 +16,7 @@
 - name: systemd | enable bui-agent service
   systemd:
     daemon-reload: yes
-    name: 'bui-agent.service'
+    name: bui-agent
     state: started
     enabled: yes
 
