--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -13,6 +13,10 @@
 #  notify:
 #    - systemd daemon-reload
 
+- name: systemd daemon-reload
+  systemd:
+    daemon_reload: yes
+
 - name: systemd | enable bui-agent service
   systemd:
     daemon-reload: yes
