--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -9,7 +9,7 @@
     dest: "{{ item.dest }}"
   with_items:
     - { src: "systemd/bui-agent.service.j2",
-        dest: "/etc/systemd/system/multi-user.target.wants/bui-agent.service" }
+        dest: "/etc/systemd/system/bui-agent.service" }
 #  notify:
 #    - systemd daemon-reload
 
