rename buiagent to bui-agent service on supervisord too

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,7 +3,7 @@
 
 - name: restart buiagent
   supervisorctl:
-    name: buiagent
+    name: bui-agent
     state: restarted
   when: not bui_agent_systemd
 
