--- a/tasks/config_agent.yml
+++ b/tasks/config_agent.yml
@@ -5,22 +5,24 @@
   package:
     name: "{{ burp_agent_packages| join(',') }}"
     state: present
+  retries: 3
+  delay: 2
   when: python_pip_executable != "pip3"
 
 # workaround for ubuntu 14.04 with missing pip3 executable
 - block:
-    
+
     - name: stat to see if pip3 executable is present
       stat:
         path: '/usr/bin/pip3'
       register: pip3_executable_stat
-    
+
     - name: Absent python3-pip if /usr/bin/pip3 is not present
       package:
         name: 'python3-pip'
         state: absent
       when: not pip3_executable_stat.stat.exists
-  
+
   when: ansible_distribution_release == 'trusty'
 
 - name: stat to see if pip2 exists
@@ -32,6 +34,8 @@
   package:
     name: "{{ burp_agent_py3_packages| join(',') }}"
     state: present
+  retries: 3
+  delay: 2
   when: python_pip_executable == "pip3"
 
 - name: Uninstall buiagent pip2 packages when using pip3 as pip executable
@@ -39,6 +43,8 @@
     name: "{{ burp_agent_pip_burpui }}"
     state: absent
     executable: "pip2"
+  retries: 3
+  delay: 2
   when: python_pip_executable == "pip3" and pip2_executable_stat.stat.exists
 
 - name: install buiagent pip packages
@@ -47,15 +53,19 @@
     state: present
     executable: "{{ python_pip_executable }}"
     extra_args: --ignore-installed six
+  retries: 3
+  delay: 2
 
 - name: Install buiagent pip
   pip:
     name: "{{ item.name }}"
     state: present
-    version: "{{ item.version}}"
+    version: "{{ item.version }}"
     executable: "{{ python_pip_executable }}"
   with_items: "{{ burpui_pip_packages }}"
-  notify: 
+  retries: 3
+  delay: 2
+  notify:
     - restart bui-agent
     - restart bui-agent systemd
 
@@ -65,6 +75,6 @@
     dest: "{{ item.dest }}"
   with_items:
     - { src: "buiagent.cfg.j2", dest: "/etc/burp/buiagent.cfg" }
-  notify: 
+  notify:
     - restart bui-agent
     - restart bui-agent systemd
