--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -4,16 +4,21 @@
 - name: redhat | install EPEL release package for RHEL
   yum:
     name: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
-    state: latest
+    state: present
+  retries: 2
+  delay: 2
   when: ansible_distribution == 'Red Hat Enterprise Linux'
 
 - name: redhat | install EPEL release package for Centos
   yum:
     name: "epel-release"
     state: present
+  retries: 3
+  delay: 2
   when: ansible_distribution == 'CentOS'
 
-- set_fact:
+- name: set ius_distribution_abbrev var
+  set_fact:
     ius_distribution_abbrev: "{{ (ansible_distribution == 'CentOS') | ternary('centos', 'rhel') }}"
 
 # Must be state: present due to deficiency in ansible. See:
@@ -22,6 +27,8 @@
   yum:
     name: "https://{{ ius_distribution_abbrev }}{{ ansible_distribution_major_version }}.iuscommunity.org/ius-release.rpm"
     state: present
+  retries: 3
+  delay: 2
   when: ansible_os_family == 'RedHat' and ansible_distribution != "Fedora" and python_pip_executable == 'pip3'
 
 - name: redhat | set pip3 packages for redhat and centos
