--- a/tasks/supervisor.yml
+++ b/tasks/supervisor.yml
@@ -4,6 +4,8 @@
   package:
     name: supervisor
     state: present
+  retries: 3
+  delay: 2
 
 - name: supervisor | configure supervisor logrotate
   template:
