--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -26,3 +26,9 @@
       - redhat-rpm-config
   when: ansible_distribution != "Fedora" and python_pip_executable == 'pip3'
 
+- name: redhat | ensure pip3 command setup is done
+  easy_install:
+    name: pip
+    state: latest
+    executable: easy_install-3.6
+  when: ansible_distribution != "Fedora" and python_pip_executable == 'pip3'
