--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -8,9 +8,10 @@ burp_agent_packages:
   - libffi-devel # burpui dependency for cffi package
 
 burp_agent_py3_packages:
-  - python3
-  - python3-devel
-  - python3-pip
+  - python36
+  - python36-devel
+  - python36-setuptools
+  - python36-pip
   - redhat-rpm-config
   - libffi-devel # burpui dependency for cffi package
 
