--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -27,8 +27,7 @@
   when: ansible_distribution != "Fedora" and python_pip_executable == 'pip3'
 
 - name: redhat | ensure pip3 command setup is done
-  easy_install:
-    name: pip
-    state: present
-    executable: easy_install-3.6
+  shell: easy_install-3.6 pip
+  args:
+    creates: /usr/local/bin/pip3
   when: ansible_distribution != "Fedora" and python_pip_executable == 'pip3'
