--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,27 @@
 
 - include: multi_os.yml
 
+- name: install buiagent packages
+  package:
+    name: "{{ burp_agent_packages| join(',') }}"
+    state: present
+  retries: 3
+  delay: 2
+  when: python_pip_executable != "pip3"
+
+- name: stat to see if pip2 exists
+  stat:
+    path: '/usr/bin/pip2'
+  register: pip2_executable_stat
+
+- name: install buiagent packages for pip3
+  package:
+    name: "{{ burp_agent_py3_packages| join(',') }}"
+    state: present
+  retries: 3
+  delay: 2
+  when: python_pip_executable == "pip3"
+
 - include: redhat.yml
   when: ansible_os_family == "RedHat"
 
