--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -17,17 +17,8 @@
   delay: 2
   when: ansible_distribution == 'CentOS'
 
-- name: redhat | set pip3 packages for redhat and centos
-  set_fact:
-    burp_agent_py3_packages:
-      - python36
-      - python36-devel
-      - python36-setuptools
-      - redhat-rpm-config
-  when: ansible_distribution != "Fedora" and python_pip_executable == 'pip3'
-
 - name: redhat | ensure pip3 command setup is done
-  shell: easy_install-3.6 pip
+  shell: "{{ python_pip_root_path }}/easy_install-3.6 pip"
   args:
-    creates: /usr/local/bin/pip3
+    creates: "{{ python_pip_root_path }}/pip3"
   when: ansible_distribution != "Fedora" and python_pip_executable == 'pip3'
