--- a/vars/Fedora.yml
+++ b/vars/Fedora.yml
@@ -21,6 +21,7 @@ burpui_py3_packages:
   - python3-pip
   - python3-setuptools
   - redhat-rpm-config
+  - libffi-devel
 
 burp_ui_celery_dependencies:
   - supervisor
@@ -28,7 +29,5 @@ burp_ui_celery_dependencies:
 supervisoretc_dir: "/etc/supervisor/conf.d"
 supervisor_ext: "conf"
 supervisor_service: supervisord
-pip_installed_exe_bin_path: '/usr/bin'
-redis_service: redis
-nginx_config_dir: '/etc/nginx/conf.d'
-burpui_nginx_config_path: '{{ nginx_config_dir }}/burpui.conf'
+pip_installed_exe_bin_path: '/usr/local/bin'
+python_pip_root_path: '/usr/local/bin'
