--- a/tasks/config_agent.yml
+++ b/tasks/config_agent.yml
@@ -10,24 +10,50 @@
   delay: 2
   when: python_pip_executable == "pip3" and pip2_executable_stat.stat.exists
 
-- name: install buiagent pip packages
+- name: install buiagent pip2 packages
   pip:
     name: "{{ burp_agent_pip_present }}"
     state: present
-    executable: "{{ python_pip_root_path }}/{{ python_pip_executable }}"
+    executable: "pip2"
     extra_args: --ignore-installed six
   retries: 3
   delay: 2
+  when: python_pip_executable != "pip3"
 
-- name: Install buiagent pip
+- name: Install buiagent pip2
   pip:
     name: "{{ item.name }}"
     state: present
     version: "{{ item.version }}"
-    executable: "{{ python_pip_root_path }}/{{ python_pip_executable }}"
+    executable: "pip2"
   with_items: "{{ burpui_pip_packages }}"
   retries: 3
   delay: 2
+  when: python_pip_executable != "pip3"
+  notify:
+    - restart bui-agent
+    - restart bui-agent systemd
+
+- name: install buiagent pip3 packages
+  pip:
+    name: "{{ burp_agent_pip_present }}"
+    state: present
+    executable: "{{ python3_pip }}"
+    extra_args: --ignore-installed six
+  retries: 3
+  delay: 2
+  when: python_pip_executable == "pip3"
+
+- name: Install buiagent pip3
+  pip:
+    name: "{{ item.name }}"
+    state: present
+    version: "{{ item.version }}"
+    executable: "{{ python3_pip }}"
+  with_items: "{{ burpui_pip_packages }}"
+  retries: 3
+  delay: 2
+  when: python_pip_executable == "pip3"
   notify:
     - restart bui-agent
     - restart bui-agent systemd
