--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -19,4 +19,4 @@ supervisoretc_dir: "/etc/supervisor/conf.d"
 supervisor_ext: "conf"
 supervisor_service: supervisord
 pip_installed_exe_bin_path: '/usr/local/bin'
-python_pip_root_path: '/usr/local/bin'
+python3_pip: 'pip3.6'
