--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,26 +4,44 @@ dependency:
   options:
     ignore-certs: True
     ignore-errors: True
-    role-file: requirements.yml
+    role-file: requirements.yml  # this file is at the root of the git project same place as molecule is executed
 driver:
   name: docker
-lint:
-  name: yamllint
 platforms:
 
   - name: ansible_test-01
-    image: paulfantom/ubuntu-molecule:16.04
+    image: "geerlingguy/docker-ubuntu1804-ansible:latest"
     #privileged: True
     command: /sbin/init
+    pre_build_image: true
     capabilities:
-      - SYS_ADMIN    
+      - SYS_ADMIN
+    tmpfs:
+      - /run
+      - /tmp
     volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"        
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
+    groups:
+      - group1
+
+  - name: ansible_test-02
+    image: "geerlingguy/docker-debian9-ansible"
+    #privileged: True
+    command: /sbin/init
+    pre_build_image: true
+    capabilities:
+      - SYS_ADMIN
+    tmpfs:
+      - /run
+      - /tmp
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
     groups:
       - group1
 
   - name: ansible_test-03
-    image: centos/systemd
+    image: docker.io/pycontribs/centos:7
+    pre_build_image: true
     command: /sbin/init
     capabilities:
       - SYS_ADMIN
@@ -47,13 +65,3 @@ provisioner:
           - name: client_to_remove
           - name: other_client_to_remove
         burp_server_port_per_operation_bool: true
-  lint:
-    name: ansible-lint
-
-scenario:
-  name: default
-
-verifier:
-  name: testinfra
-  lint:
-    name: flake8
