--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,6 +1,10 @@
 ---
 - name: Converge
   hosts: all
-  roles:
-    - role: ansible_burp2_server
-    - role: ansible_burpui_agent
+  tasks:
+    - name: Include ansible_burp2_server
+      include_role: 
+        name: ansible_burp2_server
+    - name: Include ansible_burpui_agent
+      include_role: 
+        name: ansible_burpui_agent
