--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,8 @@
 galaxy_info:
-  author: Pablo Estigarribia
+  role_name: ansible_burpui_agent
+  author: "coffeeitworks"
+  company: coffeeITWorks
   description: ansible role to deploy burp-ui from Ziirish
-  company: None
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
