--- a/molecule/local/molecule.yml
+++ b/molecule/local/molecule.yml
@@ -24,26 +24,11 @@ platforms:
     groups:
       - group1
 
-  - name: ansible_burpui_agent-04
-    image: "geerlingguy/docker-centos8-ansible"
-    command: /usr/sbin/init
-    #privileged: True
-    pre_build_image: true
-    capabilities:
-      - SYS_ADMIN
-    tmpfs:
-      - /run
-      - /tmp
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    groups:
-      - use_pip_package
-
 provisioner:
   name: ansible
   config_options:
     defaults:
-      callback_whitelist: profile_tasks
+      callback_enabled: profile_tasks
     ssh_connection:
       pipelining: false
       ssh_args: -o ControlMaster=auto -o ControlPersist=60s
