--- a/.github/workflows/molecule-test.yml
+++ b/.github/workflows/molecule-test.yml
@@ -19,6 +19,7 @@ jobs:
         scenario:
           - centos-8
           - ubuntu-2004
+          - ubuntu-2204
     steps:
 
       - name: Checkout
