--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,10 +35,10 @@ burpui_pip_packages:
   - { name: "{{ burp_agent_pip_burpui }}", version: 0.7.0 }
 
 burp_agent_pip_present:
-  - "cffi>=1.7"
+  - "cffi>=1.14.5"
   #- "urllib3>=1.19" # required to avoid issues with get_url module
   # - "ndg-httpsclient>=0.4.2" # required to avoid issues with get_url module
-  - "pyasn1"
+  - "pyasn1==0.4.8"
 #[Burp]
 burpui_backend_bconfcli: '/etc/burp/burp.conf'
 burpui_backend_bconfsrv: '/etc/burp/burp-server.conf'
