--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for ansible_burpui_agent/
 
-- include: multi_os.yml
+- import_tasks: multi_os.yml
 
 - name: install requirements for ansible pip
   package:
@@ -15,13 +15,13 @@
   retries: 3
   delay: 2
 
-- include: redhat.yml
+- import_tasks: redhat.yml
   when: ansible_os_family == "RedHat"
 
-- include: config_agent.yml
+- import_tasks: config_agent.yml
 
-- include: supervisor.yml
+- import_tasks: supervisor.yml
   when: not bui_agent_systemd | bool
 
-- include: systemd.yml
+- import_tasks: systemd.yml
   when: bui_agent_systemd | bool
