--- a/molecule/rocky9/molecule.yml
+++ b/molecule/rocky9/molecule.yml
@@ -1,3 +1,4 @@
+---
 dependency:
   name: galaxy
   options:
@@ -8,10 +9,10 @@ driver:
   name: docker
 platforms:
 
-  - name: ansible_burpui_agent-04
-    image: "geerlingguy/docker-centos8-ansible"
-    privileged: True
+  - name: ansible_burpui_server-rocky9
+    image: "docker.io/geerlingguy/docker-rockylinux9-ansible:latest"
     command: /sbin/init
+    privileged: True
     pre_build_image: true
     capabilities:
       - SYS_ADMIN
@@ -28,6 +29,3 @@ provisioner:
   config_options:
     defaults:
       callback_enabled: profile_tasks
-    ssh_connection:
-      pipelining: true
-      ssh_args: -o ControlMaster=auto -o ControlPersist=60s
