--- a/molecule/local-rocky9/converge.yml
+++ b/molecule/local-rocky9/converge.yml
@@ -1,14 +1,10 @@
 ---
 - name: Converge
   hosts: all
-  vars:
-    burpui_standalone: True
   tasks:
-    # - name: Include ansible_burp2_server
-    #   include_role:
-    #     name: coffeeitworks.burp2_server
-    - name: Include ansible_burpui_server
+    - name: Include ansible_burp2_server
       include_role: 
-        name: ansible_burpui_server
-      tags:
-        - burpui-server
+        name: ansible_burp2_server
+    - name: Include ansible_burpui_agent
+      include_role: 
+        name: ansible_burpui_agent
