--- a/molecule/rocky9/converge.yml
+++ b/molecule/rocky9/converge.yml
@@ -1,13 +1,10 @@
 ---
 - name: Converge
   hosts: all
-  vars:
-    burpui_standalone: True
-    # burpui_pip_burpui_dev: 'git+https://git.ziirish.me/ziirish/burp-ui.git@master#egg=burp-ui'
-    burpui_use_dev: True
   tasks:
-    - name: Include ansible_burpui_server
+    - name: Include ansible_burp2_server
       include_role: 
-        name: ansible_burpui_server
-      tags:
-        - burpui-server
+        name: ansible_burp2_server
+    - name: Include ansible_burpui_agent
+      include_role: 
+        name: ansible_burpui_agent
